# SaaS_agenticAI

./: .env.example  .gitignore  Makefile  docker-compose.yml  start.md
.github/workflows/: ci.yml
infra/keycloak/: realm-export.json
infra/loki/: config.yml
infra/otel/: otel-collector.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/redpanda/: console-config.yml
infra/tempo/: tempo.yml
infra/vault/: dev-policy.hcl
scripts/: bootstrap-topics.sh  seed-vault.sh  test-postgres.sh  wait-for-services.sh
services/: integration-smoke-test.py  run-integration-test.sh
services/accounting-service/: Dockerfile  pyproject.toml
services/agent-service/: Dockerfile  pyproject.toml
services/analytics-service/: Dockerfile  pyproject.toml
services/approval-service/: Dockerfile  pyproject.toml
services/audit-service/: Dockerfile  alembic.ini  pyproject.toml
services/crm-service/: Dockerfile  pyproject.toml
services/crm-service/alembic/: env.py
services/crm-service/alembic/versions/: 001_create_crm_tables.py
services/crm-service/app/: config.py  consumer.py  dependencies.py  events.py  main.py  models.py  schemas.py
services/crm-service/app/routers/: contacts.py  health.py  leads.py  opportunities.py
services/crm-service/tests/: conftest.py  test_contacts.py  test_leads.py  test_opportunities.py  test_tenant_isolation.py
services/inventory-service/: Dockerfile  pyproject.toml
services/marketing-service/: Dockerfile  pyproject.toml
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  (+1 more)
(+212 files in other folders)
